[project]
name = "thinkfeelshare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "alembic>=1.16.1",
   "fastapi>=0.115.12",
   "pydantic-settings>=2.9.1",
   "python-multipart>=0.0.20",
   "python-socketio>=5.13.0",
   "sqlmodel>=0.0.24",
   "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
]
